[package]
name = "openapi-schema"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2018"

[features]
default = ["chrono"]

[dependencies]
# custom commit to get public Parameter::style
openapi = { git = "https://github.com/antoine-de/openapi", rev = "11f732b373d2dc1d725f77a245fac3677b51318b" }
openapi-schema-derive = { path = "openapi-schema-derive" }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
