[package]
name = "openapi-schema-derive"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15.26"
quote = "0.6.11"
openapi = { git = "https://github.com/antoine-de/openapi", rev = "11f732b373d2dc1d725f77a245fac3677b51318b" }
proc-macro2 = "0.4"
